Always update surface references.

This CL ensures that if the set of referenced surfaces from the active
tree changes then a new CompositorFrame will be submitted. Before this
CL LayerTreeHostImpl didn't look at referenced surfaces in HasDamage()
so if there is no other damage then it will skip submitting a
CompositorFrame.

For this to happen the SurfaceLayer can't be visible, as updating the
fallback SurfaceId will otherwise contribute to the damage rect.

Bug: 854798
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Id3f196bc151d6118e31c51f2bedc62fc773ee65f
Reviewed-on: https://chromium-review.googlesource.com/1114066
Reviewed-by: enne <enne@chromium.org>
Commit-Queue: kylechar <kylechar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570177}
Former-commit-id: 1be23e1d749f5c86682169d36ac631697bb044de