cc/trees/layer_tree_host_impl.h
@@ -1080,6 +1080,7 @@ class CC_EXPORT LayerTreeHostImpl
   uint32_t next_frame_token_ = 1u;
 
   viz::LocalSurfaceId last_draw_local_surface_id_;
+  base::flat_set<viz::SurfaceId> last_draw_referenced_surfaces_;
   base::Optional<RenderFrameMetadata> last_draw_render_frame_metadata_;
   viz::ChildLocalSurfaceIdAllocator child_local_surface_id_allocator_;
 
